menambahkan pitur skill

--- a/style.css
+++ b/style.css
@@ -14,3 +14,17 @@ section {
 #submit:hover {
   background-color: black;
 }
+#logo-skill {
+  display: inline-block;
+  padding: 10px;
+  border-radius: 10px;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  cursor: pointer;
+}
+#logo-skill:hover {
+  transform: scale(1.2); /* Memperbesar ikon saat dihover */
+  opacity: 0.8;
+}
+#skill {
+  background-color: #273036;
+}
